CSS | JS | README: Potentially fixed bug that zooms in when entering usernmae, destroying some styling on mobile. Created a function and method using jQuery and Java to increase the font-size temporarily on mobile. Documented in README

--- a/assets/css/animation.css
+++ b/assets/css/animation.css
@@ -120,6 +120,8 @@ span {
     text-align: center;
     height: 100vh;
     width: 100vw;
+    padding-right: 0px;
+    padding-left: 0px;
     z-index: 5;
 }
 
@@ -163,6 +165,7 @@ img {
 #nameField {
     font-size: 15px;
     text-align: center;
+    outline: none;
 }
 
 .submit {
@@ -179,6 +182,10 @@ img {
 }
 
 #subButton:focus {
+    outline: none;
+}
+
+.remove-outline {
     outline: none;
 }
 
@@ -365,23 +372,21 @@ a:link {
 }
 
 
-
-
     @keyframes LINTON {
     0% {
-        transform: translateX(0) translateY(100px) rotate(-3deg);
+        transform: translateX(0) translateY(150px) rotate(-3deg);
     }
     25% {
-        transform: translateX(0.5px) translateY(107px) rotate(0deg);
+        transform: translateX(0.5px) translateY(157px) rotate(0deg);
     }
     50% {
-        transform: translateX(0px) translateY(103px) rotate(3deg);
+        transform: translateX(0px) translateY(153px) rotate(3deg);
     }
     75% {
-        transform: translateX(0.3px) translateY(105px) rotate(0deg);
+        transform: translateX(0.3px) translateY(155px) rotate(0deg);
     }
     100% {
-        transform: translateX(0px) translateY(100px) rotate(-3deg);
+        transform: translateX(0px) translateY(150px) rotate(-3deg);
     }
     }
 
