--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -79,6 +79,8 @@ span {
     text-align: center;
     height: 100vh;
     width: 100%;
+    padding-left: 0px;
+    padding-right: 0px;
     z-index: 7;
 }
 
